# baregear

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: cmake-multi-platform.yml
docs/: Function Declearation.rst  Quick Start.rst  conf.py  index.rst
include/: definations.h  lexer.h  parser.h  preprocessor.h  runtime.h  transpiler.h
lib/: CMakeLists.txt  runtime.asm
scripts/: generateAudioHeaders.py
src/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp  preprocessor.cpp  transpiler.cpp
